facet-zod/tests/snapshots/codegen__collections.snap
---
source: tests/codegen.rs
expression: output
---
export const Config2Schema = z.object({
  settings: z.record(z.string(), z.string()),
  flags: z.array(z.boolean()),
  matrix: z.tuple([z.number().int(), z.number().int(), z.number().int()]),
});
export type Config2 = z.infer<typeof Config2Schema>;
