facet-zod/tests/snapshots/codegen__generics.snap
---
source: facet-zod/tests/codegen.rs
expression: output
---
export const Wrapu32Schema = z.object({
  inner: z.number().int(),
});
export type Wrapu32 = z.infer<typeof Wrapu32Schema>;

export const WrapStringSchema = z.object({
  inner: z.string(),
});
export type WrapString = z.infer<typeof WrapStringSchema>;

export const HolderSchema = z.object({
  a: Wrapu32Schema,
  b: WrapStringSchema,
});
export type Holder = z.infer<typeof HolderSchema>;
