facet-zod/tests/snapshots/codegen__has_default.snap
---
source: facet-zod/tests/codegen.rs
expression: output
---
export const DefaultedSchema = z.object({
  count: z.number().int().optional(),
  name: z.string(),
});
export type Defaulted = z.infer<typeof DefaultedSchema>;
