facet-zod/tests/snapshots/codegen__mutual_recursion.snap
---
source: facet-zod/tests/codegen.rs
expression: output
---
export const NodeSchema = z.object({
  edge: z.lazy(() => EdgeSchema),
});
export type Node = z.infer<typeof NodeSchema>;

export const EdgeSchema = z.object({
  back: NodeSchema.nullish(),
});
export type Edge = z.infer<typeof EdgeSchema>;
