facet-zod/tests/snapshots/codegen__nested_struct.snap
---
source: facet-zod/tests/codegen.rs
expression: output
---
export const UserSchema = z.object({
  name: z.string(),
  age: z.number().int(),
  email: z.string().nullish(),
});
export type User = z.infer<typeof UserSchema>;

export const PostSchema = z.object({
  title: z.string(),
  body: z.string(),
  author: UserSchema,
  tags: z.array(z.string()),
});
export type Post = z.infer<typeof PostSchema>;
