facet-zod/tests/snapshots/codegen__newtype.snap
---
source: tests/codegen.rs
expression: output
---
export const WrapperSchema = z.string();
export type Wrapper = z.infer<typeof WrapperSchema>;
