facet-zod/tests/snapshots/codegen__recursive_self.snap
---
source: facet-zod/tests/codegen.rs
expression: output
---
export const TreeSchema = z.object({
  value: z.number().int(),
  children: z.array(z.lazy(() => TreeSchema)),
});
export type Tree = z.infer<typeof TreeSchema>;
