facet-zod/tests/snapshots/codegen__simple_struct.snap
---
source: facet-zod/tests/codegen.rs
expression: output
---
export const UserSchema = z.object({
  name: z.string(),
  age: z.number().int(),
  email: z.string().nullish(),
});
export type User = z.infer<typeof UserSchema>;
