facet-zod/tests/snapshots/codegen__unit_enum.snap
---
source: facet-zod/tests/codegen.rs
expression: output
---
export const StatusSchema = z.enum(["Active", "Inactive", "Banned"]);
export type Status = z.infer<typeof StatusSchema>;
